Add Beautiful Jekyll theme

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-_site
-.sass-cache
+# Default Jekyll
 .jekyll-cache
 .jekyll-metadata
 vendor
+_site
+
+# project
+.sass-cache
+.vagrant
+
+# OS specifics
+.DS_Store
+Thumbs.db
+ehthumbs.db
+
+# Ruby
+Gemfile.lock
+
+# Gems
+beautiful-jekyll-theme-*.gem
