--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Guilherme
 description: >-
   A simple site.
 baseurl: ""
-url: "guilherme.lemos.tec.br"
+url: "lemos.tec.br"
 timezone: UTC
 encoding: utf-8
 
